--- a/macpra.html
+++ b/macpra.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <p>mac push github</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione sunt ipsa
+      dicta earum eligendi fugiat dolor error consequuntur odio, quo omnis,
+      nihil officia veniam amet aspernatur quidem doloremque, ullam voluptates!
+    </p>
   </body>
 </html>
